2005-04-05  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/glade/new_book_dialog.glade,
	  data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	Added an Help button in the Add Book, Add Book Manual, Book Properties and
	Preferences dialogs that is connected to the Docbook manual.

2005-04-04  Laurent Sansonetti  <lrz@gnome.org>

	* doc/*:

	- Moved the docbook file and the figures in data/gnome/help/alexandria/C ;
	- Moved the OMF file in data/omf ;
	- This directory is now empty.

	* data/omf/alexandria/pre-setup.rb,
	  data/omf/alexandria/post-install.rb:

	Generates and installs the OMF file.

	* post-clean.rb:

	Removes the generated OMF file.

	* lib/alexandria/pre-setup.rb:

	Writes the real data dir.

	* lib/alexandria/ui.rb:

	Setups the GNOME application to use the data dir determined at the
	install.
	
	* lib/alexandria/ui/main_app.rb,
	  data/alexandria/ui/menus.xml:

	Integrated the help manual in the main menu.

2005-04-03  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/book_providers/proxis.rb:

	Workaround proxis returning all editions of a book in ISBN search
		
2005-04-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/alert_dialog.rb:

	Make the labels selectable.

	* lib/alexandria/library.rb:

	The class is now observable, and sends notifications when books are
	added, updated or removed from the library.

	* lib/alexandria/ui/completion_models.rb,
	  lib/alexandria/ui/main_app.rb:

	Observes the libraries and update the models accordingly.

2005-04-01  Laurent Sansonetti  <lrz@gnome.org>

	Introduced completion in the manual add book and book properties dialogs.
	The design is not yet finished, and is susceptible to change.
