@@ -198,7 +198,7 @@
       <owner>alexandria</owner>
       <type>list</type>
       <list_type>string</list_type>
-      <default>[Amazon, BN, MCU, Proxis, Amadeus]</default>
+      <default>[Amazon, BN, MCU, Proxis, Amadeus, IBS_it]</default>
       <locale name="C">
         <short>Providers priority</short>
         <long>A list of provider names sorted by priority.  They will be queried in that order.</long>
